Finish user edit, update, index and destroy actions

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -195,4 +195,16 @@ input {
   margin-left: 0;
 }
 
+/* Users index */
+
+.user {
+  list-style: none;
+  margin: 0;
+  li { 
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $light-grey;
+  }
+}
+
 
